--- a/master.css
+++ b/master.css
@@ -44,6 +44,6 @@ a.navlink:hover, a.navlink:active {
 
 body {
     background-color:black;
-    background-image: url("space2.jpg");
+    background-image: url("https://dvkirn.files.wordpress.com/2015/09/space2.jpg");
     font-family:"Gentium Book Basic";
 }
