damn load times

--- a/master.css
+++ b/master.css
@@ -1,30 +1,6 @@
-.text_box {
-    margin-left: 20%;
-    width: 75%;
-    padding-left: 1%;
-    padding-right: 1%;
-    padding-bottom: 1%;
-    background-color: white;
-    border-style: none;
-    text-align: left;
-}
-
 .title {
     text-align: center;
-    font-family: "Raleway", "Times", "Georgia";
-}
-
-.footer {
-    margin-left: 20%;
-    width: 75%;
-    color: white;
-    font-family: 'Anonymous Pro';
-}
-
-body {
-    //background-color:black;
-    background-image: url("https://dvkirn.files.wordpress.com/2015/09/space2.jpg");
-    font-family:"Georgia", "Helvetica", "Arial";
+    font-family: "Raleway", "Serif", "Arial";
 }
 
 .navlist {
@@ -38,7 +14,7 @@ body {
     font-weight: bold;
     color: white;
     //background-color: #3d3d3d;
-    font-family: "Raleway", "Serif";
+    font-family: "Raleway", "Serif", "Arial";
     text-decoration: none;
     //text-transform: uppercase;
     text-align: center;
@@ -62,4 +38,27 @@ a.navlink:active {
     background-color: red;
     border-style: solid;
     padding: 0px;
+}
+
+body {
+    background-color: #1d1d1d;
+    font-family:"Georgia", "Serif", "Arial";
+}
+
+.text_box {
+    margin-left: 20%;
+    width: 75%;
+    padding-left: 1%;
+    padding-right: 1%;
+    padding-bottom: 1%;
+    color: white;
+    border-style: none;
+    text-align: left;
+}
+
+.footer {
+    margin-left: 20%;
+    width: 75%;
+    color: white;
+    font-family: "Serif", "Arial";
 }
